Caching back image to avoid visual flicker on modal click

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ body {
     overflow-x: hidden;
 }
 
+.hide{
+    display: none;
+}
+
 /* Navigation Bar */
 .navbar {
     position: fixed;
